# Serpens

./: .gitignore  .prettierignore  CLAUDE.md  README.md  codecov.yml  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml
docs/plans/: 2026-05-24-test-coverage-70pct-design.md  2026-05-24-test-coverage-70pct-plan.md
docs/superpowers/plans/: 2026-05-02-retail-business-sim.md  2026-05-03-phaser-city-map.md  2026-05-03-shop-art-asset.md  2026-05-04-store-type-art-and-placement.md  2026-05-05-tauri-desktop-migration.md  2026-05-06-city-terrain-background.md  2026-05-07-staff-system.md  2026-05-08-store-stock-system.md  2026-05-10-product-image-assets.md  2026-05-12-industry-city-map.md  2026-05-12-industry-map-ux-assets.md  2026-05-13-industry-map-district-tiles.md  2026-05-15-building-first-placement.md  2026-05-16-mercantile-ledger-ui-redesign.md  2026-05-18-product-chain-graph-view.md  2026-05-26-product-chain-atlas-redesign.md  2026-05-30-multi-cities.md  2026-05-31-world-map-assets-menu.md  2026-06-03-store-upgrade-leveling.md  2026-06-11-tiered-product-chains.md
docs/superpowers/specs/: 2026-05-02-retail-business-sim-design.md  2026-05-03-phaser-city-map-design.md  2026-05-03-shop-art-asset-design.md  2026-05-04-store-type-art-and-placement-design.md  2026-05-07-staff-system-design.md  (+14 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/routes/: +layout.svelte  +page.svelte  layout.css  retail-sim.e2e.ts
tools/: generate_industry_assets.mjs  generate_product_assets.mjs
(+109 files in other folders)
