[package]
name = "serpens"
version = "0.0.1"
description = "Serpens retail simulation desktop app"
authors = ["Serpens"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "serpens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
